# mlflow_article_code

./: .env  Dockerfile  Programmatic Queries.ipynb  README.md  docker-compose.yaml  dog_wiki_views.csv  ml_flow_1.py  ml_flow_2.py  ml_flow_3.py  ml_flow_final.py  pyproject.toml  setup_db.sh  start.sh  start_ui.sh
