[tool.poetry]
name = "mlflow_article"
version = "0.1.0"
description = "Code pertaining to Mutt's MLFlow article"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
xgboost = "^1.3.3"
pandas = "^1.2.1"
mlflow = "^1.13.1"
sklearn = "^0.0"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
boto3 = "^1.17.4"
lightgbm = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
